--- a/package.json
+++ b/package.json
@@ -22,5 +22,15 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
+  },
+  "scripts": {
+    "compile": "yarn hardhat compile",
+    "deploy": "yarn hardhat deploy",
+    "deploy:goerli": "yarn hardhat deploy --network goerli",
+    "test": "yarn hardhat test",
+    "test:staging": "yarn hardhat test --network goerli",
+    "lint": "yarn solhint 'contracts/*.sol'",
+    "format": "yarn prettier --write",
+    "coverage": "yarn hardhat coverage"
   }
 }
