BenToken with OpenZeppelin

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "lint": "yarn solhint 'contracts/*.sol'",
     "format": "yarn prettier --write",
     "coverage": "yarn hardhat coverage"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1"
   }
 }
